# analisis-de-sentimientos

./: LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  requirement.txt
.github/workflows/: automerge.yml  docs.yml
data/: README.md
data/01_raw/: comentarios_tiktok.csv
docs/: research_plan.md
notebooks/: README.md
